# pycnix

./: .gitignore  README.md  flake.nix  mkCxFreezeBin.nix  mkCythonBin.nix  mkPipInstall.nix  mkPyInstaller.nix  pyInstaller.nix  pyinstaller.nix  python.nix  shell.nix  update.sh
.zed/: tasks.json
docs/: README.md  TODO.md  nix.md  python.md
lib/: mkCxFreezeBin.nix  mkCythonBin.nix  mkPyInstaller.nix
nix/: apps.nix  default.nix  packages.nix  shell.nix
nix/lib/: default.nix  mkCxFreezeBin.nix  mkCythonBin.nix  mkPipInstall.nix  mkPyInstaller.nix  mkpackage.nix
python/: .gitignore
python/compressor/: console.py  default.nix  pyproject.toml  shell.nix
python/compressor/src/compressor/: __main__.py  compressor.py  ffmpeg.py
python/ffmpy/: README.md  pyproject.toml
python/ffmpy/src/ffmpy/: __init__.py
python/ffmpy/src/ffmpy/commands/: __init__.py  args.py  ffcmd.py  ffmpeg.py  ffprobe.py  stdio.py
python/ffmpy/src/ffmpy/media/: __init__.py  mediafile.py  stream.py
python/hello-world/: pyproject.toml
python/hello-world/src/hello_world/: __init__.py
python/nixos-pyinstall/: pyproject.toml
python/nixos-pyinstall/src/nixos-pyinstall/: __init__.py  main.py
python/nixos-pyinstall/src/nixos_pyinstall/: __init__.py  main.py
python/pycall/: README.md  pyproject.toml
python/pycall/src/pycall/: __init__.py  output.py  pycall.py
python/pyremdup/: detect_double.py  pyproject.toml
python/pysubfixer/: pyproject.toml
python/pysubfixer/src/pysubfixer/: __init__.py
python/slog/: README.md  pyproject.toml
python/slog/src/: __init__.py  slog.py
python/slog/src/slog/: __init__.py  log_handlers.py  slog_singleton.py
template/: flake.nix
