[project]
name = "ffmpy"
version = "0.1.0"
readme = "README.md"
authors = [{ name = "MadMcCrow", email = "do-not-mail.me@please.com" }]
requires-python = ">=3.11, <4"
dependencies = [
 "pycall>= 0.0.1",
]

[tool.uv.sources]
pycall = { path="../pycall", editable=true }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
