[project]
name = "nixos-pyinstall"
version = "0.1.0"
description = "tool to install nixos from any configuration"
authors = [{ name = "MadMcCrow", email = "do-not-mail.me@please.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["pycall >= 0.0", "slog >= 0.0", "nixconfig" ]

[project.scripts]
nixos-pyinstall = "nixos-pyinstall:nixos-pyinstall"

[project.gui-scripts]
nixos-pyinstall-gui = "gui:nixos-pyinstall-gui"

[tool.uv]
compile-bytecode = true

[tool.uv.sources]
gui = { workspace = true }
nixconfig = { workspace = true }
pycall = { path="../pycall", editable=true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
